--- a/src/ch/eaternity/client/global.css
+++ b/src/ch/eaternity/client/global.css
@@ -4,13 +4,19 @@ body, table {
 body {
   font-family: Helvetica, Arial, sans-serif;
   color: #000;
-  background: #fafafa;
+  background: #fff;
 }
 a:link, a:visited, a:hover, a:active {
   color: #000;
 }
 
-  
+.rezept {
+	background: #F4BB75;
+	-moz-border-radius: 3px;
+	-webkit-border-radius:3px;
+	border-radius: 3px;
+	border:1px solid #fff;
+}
 .gwt-Button {
   margin: 0;
   padding: 3px 5px;
