styling of top, and subtitle

--- a/src/ch/eaternity/client/global.css
+++ b/src/ch/eaternity/client/global.css
@@ -11,7 +11,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .rezept {
-	background: #F4BB75;
+	background: #F7A959;
 	-moz-border-radius: 3px;
 	-webkit-border-radius:3px;
 	border-radius: 3px;
