--- a/src/ch/eaternity/client/global.css
+++ b/src/ch/eaternity/client/global.css
@@ -104,6 +104,14 @@ background-color: #fff;
   cursor: col-resize;
 }
 
+.noSplitter .gwt-SplitLayoutPanel-VDragger {
+	background: #f00;
+	border: 0px;
+	margin: 0px;
+	padding : 0px;
+	cursor: default;
+	}
+
 .gwt-SplitLayoutPanel-VDragger {
 	background-color: #fff;
   cursor: row-resize;
