--- a/src/ch/eaternity/client/global.css
+++ b/src/ch/eaternity/client/global.css
@@ -9,11 +9,78 @@ body {
 
 hr {
 	border:solid #F48F28 1px;
-
 	}
 a:link, a:visited, a:hover, a:active {
   color: #000;
 }
+.extra-icon{
+	width:20px;
+	display:inline;
+	padding:5px 0px 0px 0px;
+	margin:0px 4px 0px -3px;
+	text-wrap:none;
+	word-wrap:none;
+	white-space: nowrap;  
+	/*
+	
+	width: 30px; 
+	text-indent: -9999px;
+	*/ 
+	text-indent: 5px;
+	height: 22px;
+	background-image: url(icons-small.png);
+	background-position: top;
+	overflow:hidden;
+
+	background-color     : transparent;
+	background-repeat    : no-repeat;
+	}
+.base-icons{
+		padding:5px 0px 0px 0px;
+	margin:0px 0px 0px -6px;
+	text-wrap:none;
+	word-wrap:none;
+	white-space: nowrap;  
+	display: block;
+	/*
+	
+	width: 30px; 
+	text-indent: -9999px;
+	*/ 
+	text-indent: 5px;
+	height: 22px;
+	background-image: url(icons-small.png);
+	background-position: top;
+	overflow:hidden;
+
+	background-color     : transparent;
+	background-repeat    : no-repeat;
+	}
+
+.smiley1 {
+		background-position  : -2px -33px;
+}
+
+.smiley2 {
+		background-position  : -2px -58px;
+}
+
+.smiley3 {
+		background-position  : -2px -83px;
+}
+
+.carrot {
+	background-position  : -2px -5px;
+}
+
+.bio {
+	background-position  : -2px -134px;
+}
+
+.regloc {
+	background-position  : -2px -109px;
+}
+
 .cursorStyle{
 	 cursor: pointer;
   	cursor: hand;
