--- a/src/ch/eaternity/client/global.css
+++ b/src/ch/eaternity/client/global.css
@@ -86,6 +86,11 @@ a:link, a:visited, a:hover, a:active {
   	cursor: hand;
   	padding: 0px 2px 2px 2px;
 	}
+	
+.ohhLittlePlus {
+	margin:-6px 0px 0px 6px;
+	text-decoration: none;
+	}
 .inline {
 	display:inline;
 	float:left;
