--- a/src/ch/eaternity/client/global.css
+++ b/src/ch/eaternity/client/global.css
@@ -135,6 +135,16 @@ a:link, a:visited, a:hover, a:active {
 		margin-top: 30px;
 	}
 	
+	.black {
+	 			color:#000;
+			padding:3px;
+	}
+	
+	.grey {
+				color:#bbb;
+			padding:3px;
+	}
+	
 .floatRight{
 	float:right;
 	margin-left:100px;
