--- a/src/ch/eaternity/client/global.css
+++ b/src/ch/eaternity/client/global.css
@@ -109,6 +109,7 @@ a:link, a:visited, a:hover, a:active {
 	display:inline;
 	overflow:hidden;
 	margin-bottom:8px;
+	font-size: 0.9em;
 	
 	}
 	.platzrechts{
