--- a/src/ch/eaternity/client/global.css
+++ b/src/ch/eaternity/client/global.css
@@ -16,7 +16,7 @@ a:link, a:visited, a:hover, a:active {
 .extra-icon{
 	width:20px;
 	display:inline;
-	padding:5px 0px 0px 0px;
+	padding:5px 0px 5px 0px;
 	margin:0px 4px 0px -3px;
 	text-wrap:none;
 	word-wrap:none;
@@ -28,7 +28,7 @@ a:link, a:visited, a:hover, a:active {
 	*/ 
 	text-indent: 5px;
 	height: 22px;
-	background-image: url(icons-small.png);
+	background-image: url(icons-3.png);
 	background-position: top;
 	overflow:hidden;
 
