--- a/src/ch/eaternity/client/Disclosure.css
+++ b/src/ch/eaternity/client/Disclosure.css
@@ -12,9 +12,11 @@
 	margin-top:2px;
 	}
 .gwt-ListBox{
-	margin-top:6px;
-	margin-right:6px;
+/*  as these things effect all listboxes	*/
+margin-top:5px; 
+margin-right:6px; 
 }
+
 .gwt-DecoratorPanel  {
 	margin-right: 4px;
 }
