--- a/src/ch/eaternity/client/global.css
+++ b/src/ch/eaternity/client/global.css
@@ -279,34 +279,88 @@ width: 65px;
 }
 
 /* Dialog boxes */
-.dialogTopLeftInner, .dialogMiddleLeftInner, .dialogBottomLeftInner,
-.dialogTopRightInner, .dialogMiddleRightInner, .dialogBottomRightInner {
-  display: none;
-}
-.gwt-DialogBox {
-  background-color: white;
-  border: 1px solid #666;
-  z-index: 2;
-}
 .gwt-DialogBox .Caption {
-  background: #d3d6dd url(gradient_bg_th.png) repeat-x bottom left;
-  font-weight: bold;
-  text-shadow: #fff 0 2px 2px;
+  background: #F1F1F1;
+  padding: 4px 8px 4px 4px;
   cursor: default;
-  padding: 5px 10px;
-  border-bottom: 1px solid #999;
-  text-align: left;
+  font-family: Arial Unicode MS, Arial, sans-serif;
+  font-weight: bold;
+  border-bottom: 1px solid #bbbbbb;
+  border-top: 1px solid #D2D2D2;
 }
 .gwt-DialogBox .dialogContent {
 }
-.gwt-DialogBox .gwt-Button {
-  margin: 10px;
+.gwt-DialogBox .dialogMiddleCenter {
+  padding: 3px;
+  background: white;
 }
-.gwt-PopupPanelGlass {
-  background-color: #000;
-  opacity: 0.3;
-  filter: literal("alpha(opacity=30)");
-  z-index: 2;
+.gwt-DialogBox .dialogBottomCenter {
+  background: url(images/hborder.png) repeat-x 0px -2945px;
+  -background: url(images/hborder_ie6.png) repeat-x 0px -2144px;
+}
+.gwt-DialogBox .dialogMiddleLeft {
+  background: url(images/vborder.png) repeat-y -31px 0px;
+}
+.gwt-DialogBox .dialogMiddleRight {
+  background: url(images/vborder.png) repeat-y -32px 0px;
+  -background: url(images/vborder_ie6.png) repeat-y -32px 0px;
+}
+.gwt-DialogBox .dialogTopLeftInner {
+  width: 10px;
+  height: 8px;
+  zoom: 1;
+}
+.gwt-DialogBox .dialogTopRightInner {
+  width: 12px;
+  zoom: 1;
+}
+.gwt-DialogBox .dialogBottomLeftInner {
+  width: 10px;
+  height: 12px;
+  zoom: 1;
+}
+.gwt-DialogBox .dialogBottomRightInner {
+  width: 12px;
+  height: 12px;
+  zoom: 1;
+}
+.gwt-DialogBox .dialogTopLeft {
+  background: url(images/circles.png) no-repeat -20px 0px;
+  -background: url(images/circles_ie6.png) no-repeat -20px 0px;
+}
+.gwt-DialogBox .dialogTopRight {
+  background: url(images/circles.png) no-repeat -28px 0px;
+  -background: url(images/circles_ie6.png) no-repeat -28px 0px;
+}
+.gwt-DialogBox .dialogBottomLeft {
+  background: url(images/circles.png) no-repeat 0px -36px;
+  -background: url(images/circles_ie6.png) no-repeat 0px -36px;
+}
+.gwt-DialogBox .dialogBottomRight {
+  background: url(images/circles.png) no-repeat -8px -36px;
+  -background: url(images/circles_ie6.png) no-repeat -8px -36px;
+}
+html>body .gwt-DialogBox {
+}
+* html .gwt-DialogBox .dialogTopLeftInner {
+  width: 10px;
+  overflow: hidden;
+}
+* html .gwt-DialogBox .dialogTopRightInner {
+  width: 12px;
+  overflow: hidden;
+}
+* html .gwt-DialogBox .dialogBottomLeftInner {
+  width: 10px;
+  height: 12px;
+  overflow: hidden;
+}
+* html .gwt-DialogBox .dialogBottomRightInner {
+  width: 12px;
+  height: 12px;
+  overflow: hidden;
+}
+.cw-DialogBox {
 }
 
 /* GWT Tree */
