some work on view.jsp

--- a/src/ch/eaternity/client/global.css
+++ b/src/ch/eaternity/client/global.css
@@ -248,7 +248,7 @@ width: 65px;
 	margin-top:5px;
 	}
 .gwt-Button {
-  margin: 0;
+  margin: 2px;
   padding: 2px 5px 3px 5px;
   text-decoration: none;
  /* cursor: pointer;
