--- a/src/ch/eaternity/client/global.css
+++ b/src/ch/eaternity/client/global.css
@@ -142,6 +142,16 @@ width: 100%;
 	background-position: left bottom;
 
 	}
+	
+.toolTipDown{
+	padding: 24px 14px 8px 24px;
+	border-bottom: 1.5px outset #fff;
+	
+	background-image:url('toolTipDown.png');
+	background-repeat:no-repeat;
+	background-position: right top;
+
+	}
 
 .gwt-ListBox{
 /*  as these things effect all listboxes	*/
