--- a/src/ch/eaternity/client/global.css
+++ b/src/ch/eaternity/client/global.css
@@ -144,8 +144,8 @@ width: 100%;
 	}
 	
 .toolTipDown{
-	padding: 24px 14px 8px 24px;
-	border-bottom: 1.5px outset #fff;
+	padding: 28px 14px 6px 14px;
+	/* border-bottom: 1.5px outset #fff; */
 	
 	background-image:url('toolTipDown.png');
 	background-repeat:no-repeat;
