--- a/src/ch/eaternity/client/global.css
+++ b/src/ch/eaternity/client/global.css
@@ -279,6 +279,12 @@ width: 65px;
 	margin-top:5px;
 	}
 	
+	.colored-white {
+		background: #ffffef;
+		margin:4px;
+		padding:3px;
+		display: inline;
+	}
 
 .gwt-Button {
   margin: 2px;
