--- a/war/reports.css
+++ b/war/reports.css
@@ -311,7 +311,6 @@ margin-left: -10pt;
 .zutat li {
 	list-style-position: outside;
 	list-style-type: none;
-	display: inline;
 }
 
 .zutatRow {
@@ -446,10 +445,6 @@ color:black;
 
 	}
 	
-	.table {
-  		width: 45em;
-	}
-	
 	.howAreYou {
 	padding-right: 2.5em;
 	font-weight: 600;
@@ -458,9 +453,6 @@ color:black;
 	margin-top: -1.5em;
 	}
 	
-	.hiddenOnPage {
-		display:inherit;
-	}
  
  	.kopf { 
  	margin-right: -14pt;
@@ -471,11 +463,23 @@ color:black;
 	}
 }
 
+.cover-up {
+	background:white;
+	bottom:20em;	
+	-moz-border-radius-bottomright:6px;
+	-webkit-border-bottom-right-radius:6px;
+	border-bottom-right-radius:6px;
+	-moz-border-radius-topright:6px;
+	-webkit-border-top-right-radius:6px;
+	border-top-right-radius:6px;
+}
+
 .table {
 border-color: #929292;
 border-style: none;
 padding-top: 0em;
 border-width: 0pt;
+width: 45em;
 }
 
 .table-header {
