--- a/src/ch/eaternity/client/global.css
+++ b/src/ch/eaternity/client/global.css
@@ -86,6 +86,11 @@ margin-right: 65px;
 overflow: hidden;
 width: 100%;
 	}
+	
+.productInfo {
+	margin:5px;
+	padding:5px;
+}
 
 	.legend1 {
 		display: block;
