--- a/src/ch/eaternity/client/global.css
+++ b/src/ch/eaternity/client/global.css
@@ -92,6 +92,13 @@ width: 100%;
 	padding:5px;
 }
 
+.recipeInfo {
+	padding:5px;
+	background-color:#ebebeb;
+	margin-bottom:5px;
+	padding:5px;
+}
+
 	.legend1 {
 		display: block;
 		clear:both;
