--- a/src/ch/eaternity/client/ui/ingredientCellTable.css
+++ b/src/ch/eaternity/client/ui/ingredientCellTable.css
@@ -1,7 +1,17 @@
 .cellTableWidget {}
 .cellTableFirstColumn {}
 .cellTableLastColumn {}
-.cellTableFooter {}
+.cellTableFooter {
+	padding-left: 5px;
+	font-size: 12px;
+	font-weight:normal;
+	font-style:italic;
+	background: #efefef;
+	margin-top: 10px;
+	vertical-align:center;
+	height:35px;
+	
+}
 .cellTableFirstColumnFooter {}
 .cellTableLastColumnFooter {}
 .cellTableSortableHeader {}
@@ -42,12 +52,12 @@
 }
 
 .cellTableEvenRow {
-	background: #ffffff;
+	background: #efefef;
 	margin:0px;
 }
 
 .cellTableOddRow {
-	background: #efefef;
+	background: #ffffff;
 	margin:0px;
 }
 
