--- a/src/ch/eaternity/client/global.css
+++ b/src/ch/eaternity/client/global.css
@@ -99,8 +99,12 @@ width: 100%;
 	}
 	
 .productInfo {
-	margin:5px;
-	padding:5px;
+	padding:7px;
+}
+
+.inlineProductInfoItem {
+	display:inline;
+	margin:0px 5px;
 }
 
 .recipeInfo {
