--- a/src/ch/eaternity/client/ui/productCellList.css
+++ b/src/ch/eaternity/client/ui/productCellList.css
@@ -1,11 +1,13 @@
 .cellListEvenItem {
 	cursor: pointer;
 	background: #efefef;
+	padding:7px;
 }
 
 .cellListOddItem {
 	cursor: pointer;
 	background: #ffffff;
+	padding:7px;
 }
 
 .cellListSelectedItem {
