--- a/src/ch/eaternity/client/resources/constants.css
+++ b/src/ch/eaternity/client/resources/constants.css
@@ -4,5 +4,5 @@
 @def edarkgreen #a7b424;
 @def elightgreen #f0f4c2;
 @def eoddrow #f1f1f1;
-@def textgray #666666;
-@def textblack #222222;
+@def etextgray #666666;
+@def etextblack #222222;
