--- a/src/ch/eaternity/client/resources/global.css
+++ b/src/ch/eaternity/client/resources/global.css
@@ -10,8 +10,8 @@ h1 { text-shadow: 0 -1px 0px rgba(0, 0, 0, 0.55); }
 h2 { font-weight: 600; padding-bottom:1.6em; color:#000;}
 h3 { font-weight: 600; padding-bottom:1.2em; line-height: 26px;}
 
-a { color: textblack; text-decoration: none; line-height: inherit; }
-a:hover { color: textgray; text-decoration: none; }
+a { color: etextblack; text-decoration: none; line-height: inherit; }
+a:hover { color: etextgray; text-decoration: none; }
 a:visited {}
 
 
@@ -24,7 +24,7 @@ body {
 background: #eee url(images/bg-float.png) 0 0 repeat;
 font-family: "Open Sans", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, "Lucida Grande", sans-serif;
 /*color: #333;*/
-color: textblack;
+color: etextblack;
 padding-top:0px;
 }
 
@@ -96,5 +96,55 @@ footer a:hover { color: #F18224; text-decoration: underline; }
 a:link, a:visited, a:hover, a:active {
   color: #000;
 }
+
+/* Styling of RecipeScope Menu */
+@external .gwt-MenuBar;
+.gwt-MenuBar {
+	cursor: default;
+	border:none;
+}
+
+@external .gwt-MenuItem;
+.gwt-MenuBar .gwt-MenuItem {
+}
+
+@external .gwt-MenuItem-selected;
+.gwt-MenuBar .gwt-MenuItem-selected {
+}
+
+@external .gwt-MenuBar-horizontal;
+.gwt-MenuBar-horizontal {
+	background:white;
+	border-style:none;
+}
+
+.gwt-MenuBar-horizontal .gwt-MenuItem {
+	cursor: pointer;
+	padding: 3px 10px;
+	vertical-align: bottom;
+	color: #222;
+	font-weight: 500;
+	font-family: Helvetica;
+	font-size:12px;
+	border: 1px solid #a7b424;
+	background: white;
+}
+
+@external .gwt-MenuItem-selected;
+.gwt-MenuBar-horizontal .gwt-MenuItem-selected {
+	background: #f0f4c2 url(images/h_menu_hover.png) repeat-x;
+}
+
+@external .gwt-MenuItemSeparator;
+.gwt-MenuBar-horizontal .gwt-MenuItemSeparator {
+	width: 1px;
+	padding: 0px;
+	margin: 0px;
+	border: 0px;
+	/*border-left: 1px solid #ccc;*/
+	background: white;
+	display:none;
+}
+	
 
 
