--- a/src/ch/eaternity/client/resources/global.css
+++ b/src/ch/eaternity/client/resources/global.css
@@ -3,7 +3,7 @@
 /* -----------------------------------------
    Text
 ----------------------------------------- */
-p.intro { font-size: 18px; line-height: 1.3; color: textgray; }
+p.intro { font-size: 18px; line-height: 1.3; color: etextgray; }
 
 h1 small, h2 small, h3 small, h4 small, h5 small { color: #777; font-size: 60%; font-weight: normal; }
 h1 { text-shadow: 0 -1px 0px rgba(0, 0, 0, 0.55); }
@@ -97,7 +97,10 @@ a:link, a:visited, a:hover, a:active {
   color: #000;
 }
 
-/* Styling of RecipeScope Menu */
+/* -----------------------------------------
+   Styling of RecipeScope Menu
+----------------------------------------- */
+
 @external .gwt-MenuBar;
 .gwt-MenuBar {
 	cursor: default;
@@ -124,7 +127,7 @@ a:link, a:visited, a:hover, a:active {
 	vertical-align: bottom;
 	color: #222;
 	font-weight: 500;
-	font-family: Helvetica;
+	font-family: "Open Sans", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-size:12px;
 	border: 1px solid #a7b424;
 	background: white;
@@ -145,6 +148,10 @@ a:link, a:visited, a:hover, a:active {
 	background: white;
 	display:none;
 }
-	
+
+@external .gwt-Button;
+.gwt-Button {
+	margin: 0px 10px;
+}
 
 
