--- a/src/ch/eaternity/client/ui/ingredientCellTable.css
+++ b/src/ch/eaternity/client/ui/ingredientCellTable.css
@@ -20,14 +20,13 @@
 .cellTableSortedHeaderDescending {}
 .cellTableEvenRowCell {}
 .cellTableOddRowCell {}
-.cellTableSelectedRowCell {}
 .cellTableLoading {}
 
 .cellTableHeader {
 	padding: 0px;
-	color: gray;
+	color: darkgray;
 	text-align: left;
-	font-size: 12px;
+	font-size: 13px;
 	font-weight: normal;
 	background-image: none;
 	background-color: #ffffff;
@@ -47,7 +46,7 @@
 	padding-left: 5px;
 	overflow: hidden; 	
 	font-size: 12px;
-	color: #454545;
+	color: #222;
 	vertical-align: middle;
 	cursor: pointer;
 }
@@ -75,6 +74,7 @@
 
 .cellTableHoveredRowCell {
 	border: none;
+	background: #f0f4c2;
 }
 
 .cellTableKeyboardSelectedRow {
