corrected not Loading recipes

--- a/src/ch/eaternity/client/resources/global.css
+++ b/src/ch/eaternity/client/resources/global.css
@@ -126,7 +126,7 @@ a:link, a:visited, a:hover, a:active {
 
 @external .gwt-MenuBar-horizontal;
 .gwt-MenuBar-horizontal {
-	background:white;
+	background:transparent;
 	border-style:none;
 }
 
