--- a/src/ch/eaternity/client/resources/global.css
+++ b/src/ch/eaternity/client/resources/global.css
@@ -26,6 +26,7 @@ font-family: "Open Sans", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, "
 /*color: #333;*/
 color: etextblack;
 padding-top:0px;
+height:100%;
 }
 
 
