Legend reformated, Feedback Form shown

--- a/src/ch/eaternity/client/resources/global.css
+++ b/src/ch/eaternity/client/resources/global.css
@@ -66,9 +66,17 @@ header {
 	padding:5px;
 	background-color:#ebebeb;
 	margin-bottom:5px;
-
 }
 
+.generalAnchor, generalAnchor:visited {
+	color:#EE7D31;
+	text-decoration: none;
+}
+
+.generalAnchor:hover {
+	color:#EE7D31;
+	text-decoration: undeline;
+}
 
 /* -----------------------------------------
    Rotation of Images
